<resources>
    <string name="app_name">PawQuiz</string>
    <string name="home_button_start">Bark On!</string>
    <string name="question_prompt_1">Bark if you know me! What breed am I?</string>
    <string name="question_prompt_2">Paw-lease tell me, what am I called?</string>
    <string name="question_prompt_3">Can you spot which furry friend this is?</string>
    <string name="question_prompt_4">Wag your tail if you know this breed!</string>
    <string name="question_prompt_5">Put your best paw forward! What breed am I?</string>
    <string name="question_prompt_6">Howl\'s this for a challenge? Name that breed!</string>
    <string name="question_prompt_7">Dog-gone it, do you know my name?</string>
...
    <string name="failed_to_load_text">Paws for a moment!\n Our questions got tangled in their leash. Give it another try!</string>
    <string name="failed_to_load_try_again">Sniff Out New Questions!"</string>
    <string name="welcome_title">" Who's That Doggo?"</string>
    <string name="welcome_subtitle">A Breed Guessing Adventure</string>
    <string name="welcome_high_score">Your Pawsome Record: %1$d</string>
    <string name="welcome_empty_high_score">Unleash Your Quiz Skills</string>
    <string name="question_current_score">Dog Tags Collected: %1$d</string>
    <string name="result_score">Not quite ribbon-worthy yet.</string>
    <string name="result_new_high_score">HOW-L Amazing! You\'ve Set a New High Score!</string>
    <string name="result_button_play_again">Bark for More</string>
</resources>
