...
import com.rickyputrah.pawquiz.ui.theme.PawQuizTheme
import com.rickyputrah.pawquiz.util.LocalImageLoader
import com.rickyputrah.pawquiz.util.ReferencePreviewDevicesLightDarkMode
import kotlinx.serialization.Serializable
import kotlin.random.Random

const val DOG_IMAGE_TEST_TAG = "DOG_IMAGE_TEST_TAG"
const val FAILED_TO_LOAD_IMAGE_TEST_TAG = "FAILED_TO_LOAD_IMAGE_TEST_TAG"

@Serializable
private data object QuestionRoute : Route

fun NavGraphBuilder.question(navController: NavController) {
...
